--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "motion": "^12.23.12",
     "next": "15.4.5",
     "next-intl": "^4.3.4",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.7"
   },
